fix left aligned button margin

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -53,11 +53,11 @@
         margin-left: 0;
       }
 
-      // &:not(.button--icon-pos-right) {
-      //   .#{$button-class}__content {
-      //     margin-left: -2rem;
-      //   }
-      // }
+      &:not(.button--icon-pos-right) {
+        .#{$button-class}__content {
+          margin-left: -2rem;
+        }
+      }
 
       &.button--icon-pos-right {
         .#{$button-class}__content {
